address ref coords bug and squash

--- a/client/src/components/DrawerLeft/DrawerLeft.scss
+++ b/client/src/components/DrawerLeft/DrawerLeft.scss
@@ -87,9 +87,8 @@
       font-family: Arial, Helvetica, sans-serif;
       font-size: clamp(8px, 3.25vw, 14px);
       line-height: 1.8;
+      padding-top: 5px;
       margin: 0px;
-      // padding-left: 2px; // mobile
-
       // overflow: scroll;
       // overflow-x: hidden;
 
