--- a/client/src/components/styles.scss
+++ b/client/src/components/styles.scss
@@ -352,7 +352,8 @@
     width: 45%;
     left: -45.2vw;
     .button-wrapper {
-      margin-left: 45%;
+      // margin-left: 45%;
+      margin-left: 44.8%;
     }
   }
 }
